[package]
name = "dollar1_unistroke"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_simple_text_input = "0.10.2"
chrono = { version = "0.4.40", features = ["wasmbind"] }
